--- a/css-frameworks-ca-linda/src/sass/partials/_nav.scss
+++ b/css-frameworks-ca-linda/src/sass/partials/_nav.scss
@@ -24,3 +24,10 @@
 hr {
     display: none;
 }
+
+@media (max-width: 576px) {
+    .navbar {
+        padding-left: 2em;
+        padding-right: 2em;
+    }
+}
