--- a/css-frameworks-ca-linda/src/sass/partials/_form.scss
+++ b/css-frameworks-ca-linda/src/sass/partials/_form.scss
@@ -1,3 +1,9 @@
+.contact-form {
+    background-color: #EFEFEF;
+    padding: 1em;
+    margin-top: 2em;
+}
+
 .btn-disabled {
     background-color: $color-secondary;
     color: #FFF;
