--- a/css-frameworks-ca-linda/src/sass/style.scss
+++ b/css-frameworks-ca-linda/src/sass/style.scss
@@ -22,6 +22,7 @@ $input-bg: #FFF;
 @import "~bootstrap/scss/bootstrap";
 
 @import "./partials/layout";
+@import "./partials/carousel";
 @import "./partials/nav";
 @import "./partials/form";
 @import "./partials/contactInfo";
