--- a/css-frameworks-ca-linda/src/sass/partials/_footer.scss
+++ b/css-frameworks-ca-linda/src/sass/partials/_footer.scss
@@ -13,10 +13,21 @@ footer {
     flex-wrap: wrap;
 }
 
-.footer-social {
+.footer__social {
     display: flex;
 }
-.footer-social-link {
+.footer__social__link {
     font-size: 25px;
     padding-right: 1em;
+}
+
+@media (max-width: 600px) {
+    .footer__social {
+        justify-content: center;
+        width: 100%;
+    }
+    .footer__social__link {
+        padding-right: 0;
+        padding: 0.5em;
+    }
 }
