--- a/css-frameworks-ca-linda/src/sass/partials/_form.scss
+++ b/css-frameworks-ca-linda/src/sass/partials/_form.scss
@@ -1,7 +1,15 @@
+.header {
+    margin: 1em;
+}
+
 .contact-form {
     background-color: #EFEFEF;
     padding: 1em;
-    margin-top: 2em;
+}
+
+.form-check-input {
+    background-color: $color-primary;
+    border: none;
 }
 
 .btn-disabled {
